--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
+mkdocs-apidoc==0.1.0; python_version >= "3.7" and python_version < "4.0"
 mkdocs==1.0.4; (python_full_version >= "2.7.9" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 pygments==2.8.1; python_version >= "3.5"
